--- a/src/sass/variables/_variables.scss
+++ b/src/sass/variables/_variables.scss
@@ -299,3 +299,6 @@ $sidebar-toggle-bar-width: 10px !default;
 // SCREEN 
 $screen-xl: 1600px !default;
 $screen-xxl: 2100px !default;
+
+// TABS
+$tab-active-color: $brand-primary;
